# SengFu__AI-Agent

./: .dockerignore  .env.example  .gitignore  AGI_FRAMEWORK_ASSESSMENT_REPORT.md  API_CALLER_IMPLEMENTATION_PLAN.md  CLAW_COMPARISON_REPORT.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPLIANCE_REPORT.md  CPU版本安装.bat  CPU版本安装.sh  CURRENT_STATUS_REPORT.md  Dockerfile  ENHANCEMENT_PLAN.md  FINAL_IMPLEMENTATION_REPORT.md  FIXED_TOKEN_STATUS_REPORT.md  GPU支持安装.bat  GPU支持安装.sh  HTML启动.bat  HTML启动.sh  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS_REPORT.md  INSTALL.md  LEGAL.md  Makefile  PROJECT_ARCHITECTURE_80K.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TSX启动.bat  TSX启动.sh  __init__.py  build.py  build_exe.py  docker-compose.yml  fix_database_enum.py  fix_mock_data.py  init_database.py  main.py  (+11 more)
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
aisec/: __init__.py  command_interceptor.py  zero_trust_executor.py
aisec/adversarial_robustness/: __init__.py  backdoor_detector.py  model_steal_defense.py  pgd_trainer.py
aisec/alignment/: __init__.py  agent_auditor.py  semantic_intent.py
api/: __init__.py  api_service.py  celery_app.py  main.py
channel/: __init__.py  base.py  gateway.py  health_checker.py  metrics.py  rate_limiter.py  router.py  session_manager.py  universal_message.py  webhook_handler.py
cli/: __init__.py  channel.py  completion.py  config.py  interactive.py  main.py  metrics.py  personality.py  plugin.py  routing.py  wizard.py
compression/: model_compression_acceleration.py
computer_use/: __init__.py  agent_brain.py  clipboard_engine.py  element_engine.py  file_ops.py  input.py  monitor.py  ocr_engine.py  real_input.py  real_screen.py  real_window.py  requirements.txt  screen.py  screenshot.py  vision_engine.py  window_engine.py  workflow_recorder.py
config/: gunicorn.conf.py
continual/: replay_buffer.py  sdfd.py
core/: adaptive_algorithm_selector.py  balance_regulator.py  cold_memory.py  confidence.py  difficulty_scheduler.py  expert.py  gate.py  goal_layer.py  halt_detector.py  intrinsic_motivation.py  moe.py  mpc_planner.py  online_distill.py  reflexion.py  release_trigger.py  replay_buffer.py  sdfd.py  state_bus.py  swing_engine.py  uncertainty.py  warm_memory.py
data_pipeline/: __init__.py  cache.py  downloader.py  loader.py  physics_sim.py  preprocessor.py
database/: __init__.py  connection.py  crud.py  migrations.py  models.py  seed_data.py  unified_storage.py  utils.py
deployment/: deployment_manager.py
desktop/: build_installer.py  system_tray.py
docs/: comparison_with_lobster_ecosystem.md
edge/: benchmark_tool.py  jetson_optimizer.py  onnx_optimizer.py  tflite_converter.py
evaluation/: __init__.py  benchmark.py  metrics.py
federated/: __init__.py  evolution_coordinator.py  mpc.py  multiagent_federated.py  server.py
formal/: coq_interface.py  lean_interface.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
hardware/: verilog_gen.py
inference/: inference_engine.py
interpretability/: model_interpretability.py
iot/: __init__.py  ble_scanner.py  modbus_rtu.py  opcua_client.py
llm/: __init__.py  orchestrator.py
local/: __init__.py  local_ai.py
media/: __init__.py
monitoring/: logging_monitor.py
multiagent/: __init__.py  alliance_genetic.py
multimodal/: __init__.py  data_loader.py  embedding_cache.py  multimodal_core.py  multimodal_processor.py  vision_encoder.py
plugin/: __init__.py  manager.py  sandbox.py  sdk.py  security.py
plugins/: __init__.py  loader.py  manager.py  marketplace_client.py  sandbox.py
rag/: __init__.py  embedder.py  pipeline.py  retriever.py  vector_store.py
robot/: __init__.py  controller_base.py  digital_twin.py  emergency_stop.py  energy_manager.py  fault_diagnosis.py  firmware_updater.py  hrc.py  offline_programming.py  safety_fence.py  state_monitor.py  teleoperation.py
sandbox/: __init__.py  cleanup_daemon.py  docker_executor.py  fs_manager.py  interface.py  nsjail_executor.py  report_generator.py  result_collector.py  virtualenv_executor.py  vulnerability_check.py
scripts/: benchmark.py  download_models.py  entrypoint.sh  evaluate.py  healthcheck.sh  serve.py  setup_environment.py  train.py
security/: __init__.py  __main__.py  action_guard.py  capability_minimizer.py  compliance_audit.py  double_auth.py  key_vault.py  permission_boundary.py
skill/: __init__.py  executor.py  market.py  parser.py
storage/: __init__.py  backup_manager.py  base.py  cache_decorator.py  connection_pool.py  encryption.py  file_repo.py  memory_repo.py  orm_models.py  query_builder.py  redis_repo.py  sharding_manager.py  sqlalchemy_repo.py
swarm/: __init__.py  agent_registry.py  alliance.py  communication.py  consensus.py  coordination.py  debate.py  incentive.py  knowledge_transfer.py  reputation.py  task_allocation.py
telemetry/: __init__.py  config.py  cost_analyzer.py  tracer.py
tools/: __init__.py
training_framework/: __init__.py  data.py  losses.py  optimizers.py  trainer.py
ui/: model_manager.html
video_gen/: __init__.py  api.py  audio.py  auto_config_adapter.py  inferencer.py  main.py  model_loader.py  script_generator.py  task_queue.py  unified_adapter.py  utils.py  webui.py
vscode-extension/: package.json  tsconfig.json  webpack.config.js
web/: WEB_FIX_REPORT.md  demo-nav.html  index.html  manifest.json  persistence-demo.html  setup.html  start.sh  sw.js  test-connection.html  visualization-demo.html
webui/: gradio_app.py
workflow/: __init__.py  audit_logger.py  compensation.py  conditional_executor.py  decorators.py  dsl_parser.py  engine_api.py  executor.py  graph_engine.py  human_approval.py  llm_node.py  loops.py  metrics_collector.py  nodes.py  parallel_executor.py  retry_policy.py  state_manager.py  timeout_wrapper.py  tool_node.py  visualization.py  visualizer.py
(+1363 files in other folders)
